modified:   magpod/protocol/episodes/tmp001.html 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -83,6 +83,11 @@
         text-align: right;
     
     }
+    b, i {
+
+        color: #e9ddcd;
+        
+    }
     body.flex {
     
         display: flex;
@@ -115,8 +120,15 @@
     }
     div.sect {
     
-        margin-top: 0.5rem;
+        line-height: 0.75rem;
+        margin-top: 2rem;
     
+    }
+    section.info > 
+    div.sect > span.sect {
+
+        line-height:  1.75;
+
     }
     .prompt {
     
@@ -124,7 +136,7 @@
         font-size: 1.2rem;
     
     }
-    section.info p, div.sect {
+    section.info p {
     
         text-align: justify;
         font-size: 1.1rem;
