--- a/magnusprotocol/ep/protocol-ep.css
+++ b/magnusprotocol/ep/protocol-ep.css
@@ -199,7 +199,7 @@
     .navlink {
 
         display: inherit;
-        flex-flow: row nowrap;
+        flex-flow: row wrap;
         justify-items: left;
 
     }
