--- a/magnusprotocol/ep/protocol-ep.css
+++ b/magnusprotocol/ep/protocol-ep.css
@@ -75,10 +75,15 @@
         font-size: 1.1rem;
         font-style: italic;
         text-align: right;
-        width: 485px;
-        position: relative;
-        left: 25%;
-    
+        max-width: 400px;
+        
+    }
+    section.quote {
+
+        justify-items: right;
+        display: inherit;
+        flex-flow: row wrap;
+
     }
             /* TEXT STYLES END */
             /* PAGE FORMATTING START */
