--- a/prototype.css
+++ b/prototype.css
@@ -99,7 +99,6 @@ body {
     font-family: "Besley", serif;
     color: var(--text);
     font-weight: 500;
-    font-size: 1.3rem;
 
 }
 
@@ -112,6 +111,8 @@ body {
 article {   /* all episode details */
 
     background: var(--content-bg);
+    border: var(--border);
+    border-style: double;
 
 }   /* end */
 
