modified:   Untitled-1.html 	modified:   prototype.css

--- a/prototype.css
+++ b/prototype.css
@@ -105,6 +105,9 @@ body {
 .flex {
 
     display: flex !important;
+    flex-flow: column;
+    justify-content: center;
+    align-content: center;
 
 }
 
