--- a/prototype.css
+++ b/prototype.css
@@ -105,9 +105,8 @@ body {
 .flex {
 
     display: flex !important;
-    flex-flow: column;
-    justify-content: center;
-    align-content: center;
+    justify-content: center !important;
+    align-content: center !important;
 
 }
 
