modified:   Untitled-1.html 	modified:   prototype.css

--- a/prototype.css
+++ b/prototype.css
@@ -341,6 +341,13 @@ span.ment  {
 
 }   /* end */
 
+.tooltip {
+
+    background-color: var(--content-bg);
+
+}
+
+
 /*.epdesc {
 *
 *    position: relative;
