added to style.less

--- a/style.less
+++ b/style.less
@@ -28,7 +28,7 @@
             display: block;
         }
     };
-html {
+:root, html {
     font-size: 16px;
 // THEMES ---------------------------------------------
 // ALL DARK MODES ---------------------------
